Mon Nov  5 16:49:34 CET 2001  Jordi Mallach <jordi@sindominio.net>

	* src/init.c: Robin's patch for the Manual link in the help
	menu.

	* po/{ca,es,fr}.po: updated About entry.

	* NEWS: added note about the GNOME limitation described below.

	* AUTHORS: added Martin Quinson, updated myself.

Mon Nov  5 16:43:04 CET 2001  Jordi Mallach <jordi@sindominio.net>

	* doc/C/topic.dat: added, file with the title of the manual
	for the Help menu. Beware, it won't work if GNOME-Mud is
	installed in /usr/local. Known GNOME bug, will be fixed in
	GNOME 2.
	* doc/C/Makefile.am: added topic.dat to EXTRA_DIST.

Mon Nov  5 13:20:16 CET 2001  Jordi Mallach <jordi@sindominio.net>

	* po/fr.po: French update by Martin Quinson.
	* src/init.c: added Martin to "About".

Mon Oct 29 14:17:32 CET 2001  Jordi Mallach <jordi@sindominio.net>

	* po/{ca,es}.po: minor fixes.

Mon Oct 29 03:05:35 CET 2001  Jordi Mallach <jordi@sindominio.net>

	* Makefile.am: added gnome-mud.desktop to EXTRA_DIST.

	* doc/sgmldocs.make: woops, too much snipage. Fixed the
	installation of generated docs.

Mon Oct 29 02:31:27 CET 2001  Jordi Mallach <jordi@sindominio.net>

	* Makefile.am: removed VERSION from EXTRA_DIST.

Mon Oct 29 02:22:52 CET 2001  Jordi Mallach <jordi@sindominio.net>

	* NEWS: added notes about the manual.

	* ROADMAP: request for IPv6 support.

Mon Oct 29 02:17:11 CET 2001  Jordi Mallach  <jordi@sindominio.net>

	* doc/sgmldocs.make: fixed paths of screenshots and removed
	cruft that we (still) don't need.

	* configure.in, Makefile.am: enable doc building. Beware, you now
	need a shitload of sgml packages to build gnome-mud.

Fri Oct 26 14:04:49 CEST 2001  Robin Ericsson  <lobbin@localhost.nu>

	* src/gnome-mud.h (pre_process): Returns gint instead of char*.
	* src/telnet.c (pre_process): Ditto.

	* src/map.c: Changed (void *) casting to glib macros to remove
	warnings on alpha systems.
	* src/modules.c, src/net.c, src/profiles.c: Ditto.
