@@ -10,7 +10,7 @@ figs =	preferences-window.png	\
 docname = gnome-mud
 lang = C
 omffile = gnome-mud-C.omf
-sgml_ents = $(SGML_FILES)
+sgml_ents =
 
 include $(top_srcdir)/doc/sgmldocs.make
 dist-hook: app-dist-hook
