@@ -1,3 +1,9 @@
+Tue Nov  6 16:42:17 CET 2001  Robin Ericsson  <lobbin@localhost.nu>
+
+	* doc/C/Makefile.am: Removed a circular dependency.
+	* src/init.c: (window_menu_help_manual_activate_cb): Added.
+	Also added help entry to menu.
+
 Mon Nov  5 16:49:34 CET 2001  Jordi Mallach <jordi@sindominio.net>
 
 	* src/init.c: Robin's patch for the Manual link in the help
